--- a/style.css
+++ b/style.css
@@ -7,25 +7,22 @@ h1 {
     font-size: 50px;
 }
 
-p {
-    font-size: 20px;
-}
-
 .orange-color {
     color: orange;
 }
 
-section {
+.flexible-container {
     display: flex;
 }
 
-.half-width {
-    width: 50;
-    padding-left: 5%;
+.half-with {
+    width: 100;
+    padding-left: 2%;
 }
 
-.half-width img {
-    width: 10px;
+.half-with img {
+    width: 400px;
+    margin-bottom: auto;
 }
 
 .link-button {
@@ -40,4 +37,42 @@ section {
 .top-banner {
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    padding-left: 10px;
+    background-image: url(images/dream-bg.png );
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
+.expe-with {
+    box-shadow: 10px 10px 40px gray;
+    margin-left: 05;
+    margin-right: 50px;
+    width: 40%;
+    padding-left: 20px;
+    border-radius: 10px;
+}
+
+.experience-area {
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-dev {
+    border-left: 7px salmon;
+    border-image: linear gradient green, purple;
+    border-image-slice: 1;
+}
+
+#baby-dev {
+    border-left: 15px violet;
+    border-image: linear gradient rgb(2, 0, 128);
+    border-image-slice: 5;
+}
+
+footer p {
+    text-align: center;
 }
